[gd_scene load_steps=2 format=3 uid="uid://cnwsmclb4udw1"]

[ext_resource type="Script" path="res://mode_swiche.gd" id="1_hgh7s"]

[node name="ModeSwiche" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hgh7s")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Join Lobby" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join lobby"

[node name="Make lobby" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create lobby"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Join Lobby" to="." method="_on_join_lobby_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Make lobby" to="." method="_on_make_lobby_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
